# ExtrapolationPractice

./: .gitignore  CMakeLists.txt  dependencies.txt
include/: LSMFunction.hpp  LinearLSMFunc.hpp  Loaders.hpp
include/Graphics/: Plot.hpp  PointPlotData2D.hpp  Window.hpp
src/: LinearLSMFunc.cpp  Loaders.cpp  main.cpp
src/Graphics/: Plot.cpp  PointPlotData2D.cpp  Window.cpp
